# govtool

./: .env.example  .envrc.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  flake.nix  generate_latest_report_redirect.sh  generate_report_details.sh  package-lock.json
.github/: backend-config.json  dbsync-schema.sql  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature-suggestion  feature_idea.yml  feature_idea_2.yml
.github/scripts/: generate_latest_report_redirect.sh  generate_report_details.sh  register_report.sh  remove_oldest_report.sh  set_commit_status.sh  set_deployment_environment.sh
.github/workflows/: add-issue-to-project.yml  build-and-deploy-beta.yml  build-and-deploy-dev.yml  build-and-deploy-staging.yml  build-and-deploy-test-stack.yml  build-and-deploy-test.yml  build-and-deploy.yml  build-from-main.yml  build-from-test.yml  code_check_backend.yml  code_check_frontend.yml  code_style_check_frontend.yml  deploy-dev-from-tag.yml  frontend_sonar_scan.yml  image.yml  label-bug-report.yml  label-feature-issue.yml  lighthouse.yml  merge.yaml  pr.yaml  resync-cardano-node-and-db-sync.yml  test_backend.yml  test_frontend.yml  test_integration_cypress.yml  test_integration_playwright.yml  test_storybook.yml  toggle-maintenance.yml  update-govtool-version.yml  update-intersect-package.yml
docs/: GOVERNANCE_ACTION_SUBMISSION.md
docs/architecture/: .gitignore  README.md  documentation.md
docs/operations/: DEPLOY.md  HANDLE_NEW_GOVERNANCE_ACTION_TYPE.md  README.md
gov-action-loader/: README.md
gov-action-loader/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  requirements.txt  wallets.json
gov-action-loader/frontend/: .env.example  .prettierrc.yaml  DEVELOPER.md  README.md
govtool/analytics-dashboard/: .env.example  .gitignore  .prettierrc  Dockerfile  README.md  babel.config.jest.js  next.config.js  package-lock.json  (+1 more)
govtool/backend/: .dockerignore  .envrc  .gitignore  .stylish-haskell.yaml  Dockerfile  Dockerfile.base  Dockerfile.qovery  Makefile  README.md  default.nix  example-config.json  shell.nix  sources.nix  stack.yaml  vva-be.cabal
govtool/backend/app/: Main.hs
govtool/backend/misc/: migration6.sql  schema.sql  schema2.sql:Zone.Identifier  schema4.sql  schema5.sql
govtool/backend/sql/: get-account-info.sql  get-all-proposal-stake-keys.sql  get-current-delegation.sql  get-current-epoch-params.sql  get-delegates.sql  get-drep-info.sql  get-dreps-voting-power-list.sql  get-filtered-dreps-voting-power.sql  get-network-info.sql  get-network-metrics.sql  get-network-total-stake.sql  get-previous-enacted-governance-action-proposal-details.sql  get-stake-key-voting-power.sql  get-transaction-status.sql  get-votes.sql  get-voting-anchors.sql  get-voting-power.sql  list-dreps-for-ai-search.sql  list-dreps.sql  list-proposals-my.sql  list-proposals.sql  views.sql
govtool/backend/src/VVA/: API.hs  Account.hs  AdaHolder.hs  Cache.hs  CommandLine.hs  Config.hs  DRep.hs  Epoch.hs  Ipfs.hs  Metadata.hs  Network.hs  Pool.hs  Proposal.hs  Transaction.hs  Types.hs
govtool/backend/src/VVA/API/: SyncAiResponseType.hs  Types.hs  Utils.hs
govtool/backend/src/VVA/Common/: Types.hs
infra/: .envrc.example
messages/: en.json
src/: .env.example  Makefile  docker-compose.preprod.yml  docker-compose.sanchonet.yml
tests/: GovTool Test.jsonld  README.md
(+1449 files in other folders)
